# mcepy

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/mcepy/: _core.py  _speedups.c  _speedups.pyx
tests/: test_smoke.py
