[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "numpy>=1.23",
]
build-backend = "setuptools.build_meta"

[project]
name = "mcepy"
version = "0.1.0"
description = "Median Consensus Embedding for dimensionality reduction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Yui Tomo"},
]
keywords = [
  "median consensus embedding",
  "dimensionality reduction",
  "t-SNE",
  "UMAP",
  "consensus embedding",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "umap-learn>=0.5.5",
]

[project.optional-dependencies]
dev = [
  "Cython>=3.0",
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/t-yui/mcepy"
Repository = "https://github.com/t-yui/mcepy"
Issues = "https://github.com/t-yui/mcepy/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
